kubernetes/downloads/seerr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: downloads
spec:
parentRefs:
  - name: internal
    namespace: network
  - name: external
    namespace: network
  hostnames:
    - "seerr.whoverse.dev"
    - "requests.whoverse.nexus"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seerr
          port: 5055
